# polarimetric-slope-sensing

./: .gitignore  README.md  epss.py  pyproject.toml  sample_slope_field_calculations.m
MATLAB/: README.md
MATLAB/_codes/: rectifier_deluxe.m  subsample_array.m
MATLAB/_data/: dolp_theta_vecs.mat
Python/: .gitignore  LICENSE  MEDIAN_GAIN_TASK_SUMMARY.md  README.md  epss.py  pyproject.toml  requirements.txt  smoke_test.py
Python/.virtual_documents/: PSS_walkthrough.ipynb
Python/eta_field_recon/: README.md  __init__.py  demo_eta_field.py  eta_pipeline.py  orthorectify.py  recon.py  wavelet_core.py
Python/examples/: _data.py  asit2019_mean_slope_60s.nc  load_and_reduce.py  load_and_reduce_with_median_gain.py
Python/pss/: _cli.py  fresnel.py  io.py  slope.py
Python/tests/: conftest.py  test_epss_entrypoints.py  test_eta_field_recon.py  test_pipeline.py  test_spectra_vs_aperture.py
Python/tools/: precompute_mean_wave.py  spectra_vs_aperture.py
_codes/: Compute_StokesVecs_by_BilinearInterpolation.m  Compute_StokesVecs_by_Conv_Demodul.m  get_aov.m  myrot3D.m  rot3d.m  wiper.m
_data/: __init__.py  asit2019_lidar_elevation_10min.nc  asit2019_mean_slope_60s.nc  piermont2025_ldeo_wide_5mm_mean.nc  piermont2025_unh_narrow_75mm_stack.nc
_examples/: _figstyle.py  convert_piermont_dualcam.py  load_and_reduce.py  load_and_reduce_with_median_gain.py  skyaware_demo.py  widefov_dualcam_demo.py
_original_routines_MATLAB/: sample_slope_field_calculations.m
_original_routines_MATLAB/_codes/: CASSLL_figure_defaults.m  Compute_StokesVecs_by_Conv_Demodul.m  Compute_StokesVecs_by_KernelAveraging.m  read_pyxis_raw_imagingsource.m  subsample.m
_tests/: conftest.py  smoke_test.py  test_aperture.py  test_epss_entrypoints.py  test_eta_field_recon.py  test_fresnel.py  test_gain.py  test_median_gain.py  test_pipeline.py  test_pistellato.py  test_spectra_vs_aperture.py  test_stokes.py  test_widefov.py  test_widefov_recovery.py
_tools/: diagnose_eta_long.py  precompute_mean_wave.py  spectra_vs_aperture.py  validate_eta_long_vs_lidar.py
eta_field_recon/: README.md  __init__.py  demo_eta_field.py  eta_pipeline.py  orthorectify.py  recon.py  wavelet_core.py
eta_field_recon_matlab/: README.md  aperture_transfer_function.m  aperture_transfer_gain.m  fourier_slope_projection.m  invert_mean_slope_series.m  lindisp_with_current.m  long_wave_gate.m  reconstruct_eta_field.m
eta_field_recon_matlab/parity/: make_parity_reference.py  run_parity_check.m
eta_field_recon_matlab/private/: aperture_disc.m  aperture_spatial_mean.m  circular_aperture_mask.m  direct_complete_amplitude.m  irfft_half.m  pad_reflect.m  rfft_half.m  temporal_window_vec.m  tukey_win.m
pss/: __init__.py  _cli.py  anchor.py  fresnel.py  gain.py  io.py  pistellato.py  skyaware.py  slope.py  stokes.py  widefov.py
