[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epss"
version = "0.1.0"
description = "Polarimetric Slope Sensing + elevation-field reconstruction for ocean surface waves (E-PSS)"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Nathan J. M. Laxague" },
    { name = "Christopher J. Zappa" },
]
keywords = [
    "polarimetry",
    "ocean waves",
    "polarimetric slope sensing",
    "E-PSS",
    "Stokes parameters",
    "wave elevation reconstruction",
    "directional wave spectrum",
    "remote sensing",
    "air-sea interaction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # pss core
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "netCDF4>=1.6",
    # eta_field_recon core
    "xarray>=2023.1",
    "ewdm>=1.0",
    "pyGrad2Surf>=0.1",
]

[project.optional-dependencies]
# Test runner
test = [
    "pytest>=7.0",
]
# Running the demonstration notebook
notebook = [
    "jupyter>=1.0",
    "nbformat>=5.0",
]
# Everything
all = [
    "epss[test,notebook]",
]

[project.urls]
Homepage      = "https://github.com/unh-cassll/polarimetric-slope-sensing"
"Source code" = "https://github.com/unh-cassll/polarimetric-slope-sensing/tree/main/Python"
"E-PSS paper (TGRS 2026)" = "https://doi.org/10.1109/TGRS.2026.0000000"

[project.scripts]
pss-load-reduce        = "pss._cli:load_and_reduce_main"
pss-load-reduce-median = "pss._cli:load_and_reduce_median_gain_main"
pss-eta-demo           = "pss._cli:eta_demo_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pss*", "eta_field_recon*"]
exclude = ["tests*", "examples*", "tools*"]

# epss.py is a top-level single-file module (the run_epss entry point), not a
# package, so it must be declared explicitly -- packages.find does not see it.
[tool.setuptools]
py-modules = ["epss"]

[tool.setuptools.package-data]
pss = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the project root (this dir) on sys.path during tests so that
# `from examples import _data` resolves regardless of how pytest is invoked
# (examples/ is a data+helper dir, used by the data-dependent tests).
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # netCDF4-vs-numpy ABI runtime warning that happens at import
    "ignore::RuntimeWarning:netCDF4",
    # pyGrad2Surf internally uses numpy.matrix which is deprecated;
    # we can't fix that upstream issue and it floods the test output
    "ignore::PendingDeprecationWarning:numpy.matrixlib.defmatrix",
]
